# mwecau_digivote

./: .env.example  .gitignore  .idea.md  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  DEPLOY_NGINX.sh  Dockerfile  ELECTION_BUSINESS_LOGIC.md  PROJECT_OVERVIEW.md  README.md  RELEASE.md  SECURITY.md  SECURITY_AND_LICENSING_GUIDE.md  TESTING_GUIDE.md  TEST_USERS.md  _config.yml  data_backup-v1.sql  db.sqlite  digivote.service  docker learner.md  docker-compose.yaml  manage.py  nginx-digivote.conf  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--MWECAU-Digital-Voting-System-Modern-Student-Elections-Made-Simple-Developed-by-MWECAU-ICT-1761203168050_1761203168052.txt  Pasted--core-admin-py-apps-py-init-py-management-comma-1746729437033.txt  (+12 more)
src/backend/: .env.example  .gitignore  api test.md  celery_app.py  database_buckup.sql  enviroment setup.toml  feeded data.py  pyproject.toml  requirements.txt
src/backend/core/: models.py  serializers.py  tasks.py  urls.py  views.py
src/backend/core/migrations/: 0002_alter_user_registration_number.py  0003_rename_course_code_83d7d9_idx_courses_code_fa42f1_idx_and_more.py  0004_alter_user_email.py  0005_alter_user_email.py  0006_alter_user_email.py  0007_alter_user_email.py  0008_alter_collegedata_email.py  0009_alter_collegedata_email.py  0010_collegedata_gender.py
src/backend/election/: models.py  serializers.py  views.py
src/backend/election/migrations/: 0002_vote_election_vo_token_i_2ae447_idx_and_more.py
src/backend/mw_es/: __init__.py  settings.py  urls.py
(+151 files in other folders)
