[project]
name = "backend"
version = "0.1.0"
description = "Backend package include db"
authors = [
    {name = "cleven", email = "clevengodsontech@gmail.com"}
]
license = {text = "Proprietary Licence"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "celery>=5.4",
    "redis",
    "python-dotenv"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
